<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_weight=".1">

        <ImageButton
            android:id="@+id/PrevDate"
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_height="48dp" />

        <TextView
            android:id="@+id/MainDateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageButton
            android:id="@+id/NextDate"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight=".9">

        <Button
            android:id="@+id/AttendanceStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AttendanceStatus"/>
        <Button
            android:id="@+id/CheckAnnualLeave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CheckAnnualLeave"/>
        <Button
            android:id="@+id/PayStub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PayStub"/>
        <Button
            android:id="@+id/RuleOfEmployment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RuleOfEmployment"/>
        <Button
            android:id="@+id/PrivacySetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PrivacySetting"/>

    </LinearLayout>

</LinearLayout>
