<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.linepayroll.paydoctor.MetaInfo.LoginActivity">

    <ImageView
        android:id="@+id/BasicImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/easw"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/CompanyIdForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/CompanyId"
        app:layout_constraintTop_toBottomOf="@+id/BasicImage" />

    <EditText
        android:id="@+id/UserIdForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="textPersonName"
        android:text="@string/UserId"
        app:layout_constraintTop_toBottomOf="@+id/CompanyIdForm" />

    <EditText
        android:id="@+id/PasswdForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="textPassword"
        android:text="@string/Passwd"
        app:layout_constraintTop_toBottomOf="@+id/UserIdForm" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LogIn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswdForm" />
</android.support.constraint.ConstraintLayout>
